--- a/docs/ESDG_GQ/dg.bib
+++ b/docs/ESDG_GQ/dg.bib
@@ -127,12 +127,12 @@
 
 
 @article{friedrich2017entropy,
-  title={{An Entropy Stable h/p Non-Conforming Discontinuous Galerkin Method with the Summation-by-Parts Property}},
-  author={Friedrich, Lucas and Winters, Andrew R and Fern{\'a}ndez, David C and Gassner, Gregor J and Parsani, Matteo and Carpenter, Mark H},
-  journal={arXiv preprint arXiv:1712.10234},
-  year={2017}
+  title={{An entropy stable h/p non-conforming discontinuous Galerkin method with the summation-by-parts property}},
+  author={Friedrich, Lucas and Winters, Andrew R and Fern{\'a}ndez, David C Del Rey and Gassner, Gregor J and Parsani, Matteo and Carpenter, Mark H},
+  journal={Journal of Scientific Computing},
+  pages={1--37},
+  publisher={Springer}
 }
-
 
 @book{dafermos2005compensated,
   title={Hyperbolic conservation laws in continuum physics},
@@ -158,8 +158,12 @@ keywords = "Hyperbolic conservation laws, Summation-by-parts, Stability, Conserv
 @article{chan2018discretely,
   title={{Discretely entropy stable weight-adjusted discontinuous Galerkin methods on curvilinear meshes}},
   author={Chan, Jesse and Wilcox, Lucas C},
-  journal={arXiv preprint arXiv:1805.10934},
-  year={2018}
+  journal={Journal of Computational Physics},
+volume = "378",
+pages = "366 - 393",
+year = "2019",
+issn = "0021-9991",
+doi = "https://doi.org/10.1016/j.jcp.2018.11.010"
 }
 
 @article{chan2017discretely,
@@ -415,11 +419,15 @@ author = "Cengke Shi and Chi-Wang Shu",
 }
 
 @article{ranocha2017generalised,
-  title={Generalised Summation-by-Parts Operators and Variable Coefficients},
+  title={Generalised summation-by-parts operators and variable coefficients},
   author={Ranocha, Hendrik},
-  journal={arXiv preprint arXiv:1705.10541},
-  year={2017}
+  journal={Journal of Computational Physics},
+  volume={362},
+  pages={20--48},
+  year={2018},
+  publisher={Elsevier}
 }
+
 @article{ranocha2016summation,
   title={{Summation-by-parts operators for correction procedure via reconstruction}},
   author={Ranocha, Hendrik and {\"O}ffner, Philipp and Sonar, Thomas},
@@ -553,9 +561,13 @@ author = "Cengke Shi and Chi-Wang Shu",
 @article{wintermeyer2018entropy,
   title={{An entropy stable discontinuous Galerkin method for the shallow water equations on curvilinear meshes with wet/dry fronts accelerated by GPUs}},
   author={Wintermeyer, Niklas and Winters, Andrew R and Gassner, Gregor J and Warburton, Timothy},
-  journal={arXiv preprint arXiv:1804.02221},
-  year={2018}
+  journal={Journal of Computational Physics},
+  volume={375},
+  pages={447--480},
+  year={2018},
+  publisher={Elsevier}
 }
+
 @article{wintermeyer2017entropy,
   title={{An entropy stable nodal discontinuous Galerkin method for the two dimensional shallow water equations on unstructured curvilinear meshes with discontinuous bathymetry}},
   author={Wintermeyer, Niklas and Winters, Andrew R and Gassner, Gregor J and Kopriva, David A},
